rework/user rework rework/employee merge rework rework/moved ROLE_ to global enums rework/simplified getDepartmentsByUserContext rework/renamed CustomerStatus to Status update/created TYPE_ enum for Users update/added Type to CustomUserDetails update/adjusted clr for change